--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -464,7 +464,7 @@
 
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'http://club.oneapm.com/',
-                     discourseEmbedUrl: 'http://http://docs-ai.oneapm.com/<%= current_page.url %>' };
+                     discourseEmbedUrl: 'http://docs-ai.oneapm.com<%= current_page.url %>' };
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
